--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,7 @@
     <div class="col-lg-12">&nbsp;</div>
     <!-- Content Row -->
     <div class="row">
+        {% if page.sidebar %}
         <!-- Sidebar Column -->
         <div class="col-md-3">
 
@@ -67,6 +68,12 @@
     <div class="col-md-9">
         {{content}}
     </div>
+        {% else %}
+        <div class="col-md-12">
+        {{content}}
+    </div>
+        {% endif %}
+    
     <!-- /.row -->
 </div>
 <!-- /.container -->
