--- a/_includes/custom/sidebarconfigs.html
+++ b/_includes/custom/sidebarconfigs.html
@@ -4,6 +4,9 @@
 {% elsif page.sidebar == "mydoc_sidebar" %}
 {% assign sidebar = site.data.sidebars.mydoc_sidebar.entries %}
 
+{% elsif page.sidebar == "docs_sidebar" %}
+{% assign sidebar = site.data.sidebars.docs_sidebar.entries %}
+
 {% elsif page.sidebar == "tags_sidebar" %}
 {% assign sidebar = site.data.sidebars.tags_sidebar.entries %}
 
