--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -1,9 +1,9 @@
 <!-- Send feedback function -->
 <script>
 function SendLinkByMail(href) {
-var subject= "{{site.site_title}} feedback";
-var body = "I have some feedback about the {{page.title}} page: ";
-body += window.location.href;
+var subject= "Easy Trips Contact";
+var body = "";
+//body += window.location.href;
 body += "";
 var uri = "mailto:{{site.feedback_email}}?subject=";
 uri += encodeURIComponent(subject);
@@ -13,4 +13,7 @@ window.location.href = uri;
 }
 </script>
 
-<li><a href="{% if site.feedback_link %}{{site.feedback_link}}{% else %}javascript:(function()%7BSendLinkByMail()%3B%7D)()%3B{% endif %}" target="_blank">{% if site.feedback_link == null %}<i class="fa fa-envelope-o"></i>{% endif %} {% if site.feedback_text %}{{site.feedback_text}}{% else %}Feedback{% endif %}</a></li>
+<li><a href="{% if site.feedback_link %}{{site.feedback_link}}{% else %}javascript:(function()%7BSendLinkByMail()%3B%7D)()%3B{% endif %}"
+        target="_blank">{% if site.feedback_link == null %}
+    <i class="fa fa-envelope-o"></i>{% endif %} {% if site.feedback_text %}{{site.feedback_text}}{% else %}Contact Us{% endif %}</a>
+</li>
